python/src/gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template: 
    metadata: 
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mridul549/gateway
